--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,5 +9,5 @@ author_profile: true
 
 {% assign pubs = site.publications | sort: "date" | reverse %}
 {% for post in pubs %}
-  {% include archive-single.html type="grid" %}
+  {% include archive-single.html type="list" %}
 {% endfor %}
