--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,7 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
-{% assign pubs = site.publications | sort: "date" | reverse %}
+{% assign pubs = site.publications | sort: "year" | reverse %}
+
 {% for post in pubs %}
-  {% include archive-single.html type="list" %}
+  {% include archive-single-publication.html %}
 {% endfor %}
